# video_stream_service

./: Cargo.toml  README.md
linux86/: app
src/: main.rs
