[package]
name = "video_streaming_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.4", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"          # 优化文件大小（可选值：0、1、2、3、s、z）
lto = true               # 启用链接时优化
codegen-units = 1        # 减少代码生成单元数量（提高优化效果）
panic = "abort"          # 使用更轻量级的 panic 处理
strip = true             # 移除调试信息（减小文件体积）